Added custom error views (error.html and error/404.html) for the default Spring Boot /error mapping (avoiding the Whitelabel error page). For this to work I had to remove the definition of spring.thymeleaf.prefix in application.yml. That one allowed Thymeleaf template references to have a leading '/'. See also the modified: - application.yml.dist - README.md - controllers and templates (now all referencing templates without leading '/'). KEEP THIS IN MIND for all future Thymeleaf references. UPDATE ALL application.yml files accordingly.

--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -3,11 +3,13 @@
 <head th:replace="fragments :: standard-head">
 </head>
 <body>
-<div th:replace="fragments :: standard-body-div( ~{::h1}, ~{::main})">
-	<h1 th:text="${title}">Confirmation title</h1>
+<div th:replace="fragments :: error-body-div( ~{::h1}, ~{::p})">
+	<h1>TCBL User Manager - Not found</h1>
 
 	<main>
-		<div th:utext="${utext}">Confirmation text</div>
+		<div>
+			<p>The page you were looking for does not exist on this site...</p>
+		</div>
 	</main>
 </div>
 </body>
