--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="/fragments :: standard-head">
+<head th:replace="fragments :: standard-head">
 </head>
 <body>
-<div th:replace="/fragments :: standard-body-div( ~{::h1}, ~{::main})">
+<div th:replace="fragments :: standard-body-div( ~{::h1}, ~{::main})">
 	<h1>Sign up for TCBL</h1>
     <main>
         <th:block th:if="${tcblUser} != null">
@@ -46,6 +46,6 @@
         </th:block>
     </main>
 </div>
-<script th:replace="/fragments :: validatePassword"></script>
+<script th:replace="fragments :: validatePassword"></script>
 </body>
 </html>
