--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments :: standard-head">
 </head>
 <body>
-<div th:replace="fragments :: error-body-div( ~{::h1}, ~{::main})">
+<div th:replace="fragments :: standard-body-div( ~{::h1}, ~{::main}, 1)">
 	<h1>TCBL User Manager - Error</h1>
 
 	<main>
