--- a/src/main/resources/templates/user/resetpwform.html
+++ b/src/main/resources/templates/user/resetpwform.html
@@ -4,7 +4,7 @@
 <body>
 
 <div th:if="${rpc} != null">
-	<div th:replace="fragments :: standard-body-div( ~{::h1}, ~{::main})">
+	<div th:replace="fragments :: standard-body-div( ~{::h1}, ~{::main}, 0)">
 		<h1>Reset Password</h1>
 		<main>
 			<form action="#" th:action="@{/user/resetpwform}" method="post" name="regForm"
@@ -15,7 +15,7 @@
 						<input type="password" name="password" id="password" autocomplete="off" required/>
 					</div>
 					<div class="columns large-3">
-						<label for="password">Confirm new password</label>
+						<label for="cpassword">Confirm new password</label>
 						<input type="password" name="cpassword" id="cpassword" autocomplete="off" required/>
 					</div>
 					<input type="hidden" th:value="${rpc}" name="rpc" id="rpc"/>
