--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,11 +9,10 @@
 	<main>
 		<div>
 			<p>TCBL login uses the OpenID Connect technology for Single Sign On to access participating TCBL Services.</p>
-			<p>When you navigate between TCBL services, your TCBL account is recognized and as far as you agree, the profile information you added to it is passed on.</p>
+			<p>When you navigate between TCBL services, your TCBL Single Sign On account is recognized and as far as you agree, the profile information you added to it is passed on.</p>
 			<p>You have full control over your profile information and how it is used by other services.</p>
 			<th:block sec:authorize="hasRole('ROLE_ANONYMOUS')">
-				<p>If you do not have a TCBL Single Sign On account yet, this is a good time to sign up for TCBL.</p>
-				<p>If you have an account, you may want to login with TCBL now.</p>
+				<p>If you have a TCBL Single Sign On account, you may want to login now. If you don't, this is a good time to sign up.</p>
 			</th:block>
 		</div>
 	</main>
