Removed 'Login with TCBL' button from home page. Removed 'Home' button from home page and login required page (additional model attribute 'nohomelink' controls this feature). All other navigation buttons on the home page are always visible, except for 'Sign up for TCBL', which still disappears when one is logged in.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -42,7 +42,9 @@ the other templates.
 
 	<!--/* navigation links */-->
 	<div class="row tcbl-nav-links">
-		<th:block th:replace="::navlink('Home', '/index')"> </th:block>
+		<th:block th:unless="${nohomelink}">
+			<th:block th:replace="::navlink('Home', '/index')"> </th:block>
+		</th:block>
 		<th:block th:if="${navLinks} != null">
 			<th:block th:replace="::navlinks(${navLinks})"> </th:block>
 		</th:block>
