--- a/src/main/resources/templates/loginrequired.html
+++ b/src/main/resources/templates/loginrequired.html
@@ -8,7 +8,8 @@
 
 	<main>
 		<div>
-			<p>The page you're trying to access requires you to login with TCBL first.</p>
+			<p>The page you're trying to access requires you to login with TCBL.</p>
+			<p>If you don't have TCBL account yet, please sign up for TCBL first.</p>
 		</div>
 	</main>
 </div>
