Inhibited user registration and user profile update if the privacy policy is not accepted (made those checkboxes required)

--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -47,7 +47,7 @@
 					</div>
 					<div class="row">
 						<div class="columns large-2">
-							<input type="checkbox" th:field="*{acceptedPP}"/>
+							<input type="checkbox" th:field="*{acceptedPP}" required/>
 							<label class="label--checkbox" th:for="${#ids.prev('acceptedPP')}">I accept the TCBL privacy policy.</label>
 						</div>
 					</div>
