Refactored the 'id' field in TCBLUser to 'inum'; Use 'username' as primary key in user database

--- a/src/main/resources/templates/user/info.html
+++ b/src/main/resources/templates/user/info.html
@@ -36,7 +36,7 @@
 				</fieldset>
 
 				<input type="submit" value="Update" class="button button--red"/>
-				<input type="hidden" th:field="*{id}"/>
+				<input type="hidden" th:field="*{inum}"/>
 				<!--/* post all other tcblUser's properties in the returned TCBLUser object as well! */-->
 				<input type="hidden" th:field="*{userName}"/>
 				<input type="hidden" th:field="*{active}"/>
