--- a/src/main/resources/static/css/tcbl.css
+++ b/src/main/resources/static/css/tcbl.css
@@ -52,6 +52,11 @@ ul {
     height: 50px;
 }
 
+.large-1 {
+    width: 90%;
+    min-width: 250px;
+}
+
 .large-2 {
     width: 45%;
     min-width: 250px;
@@ -69,12 +74,20 @@ h1 {
     color: #222222;
 }
 
+textarea {
+    overflow: auto;
+}
+
 form fieldset {
     border-color: #dddddd;
     border-width: 1px;
     border-style: solid;
     padding: 1.25rem;
     margin: 1.25rem;
+}
+
+form fieldset.fieldset--inner {
+    margin: 0;
 }
 
 form fieldset legend {
@@ -89,6 +102,14 @@ form label {
     font-weight: normal;
     line-height: 1.5;
     margin-bottom: 0;
+}
+
+form label.label--checkbox {
+    display: inline;
+}
+
+form .required{
+    font-weight:bold;
 }
 
 form input, form textarea {
@@ -111,26 +132,50 @@ form input, form textarea {
     transition: border-color 0.15s linear, background 0.15s linear;
 }
 
-form input[type="checkbox"] {
-    width: 1rem;
-    height: 1rem;
-    float: left;
-}
-
-form label.label--checkbox {
-    display: inline;
-}
-
 form input#reset {
     margin-left: 0;
 }
 
-textarea {
-    overflow: auto;
+form input[type=checkbox] {
+    width: 1rem;
+    height: 1rem;
+    display: inline-block;
 }
 
-form .required{
-    font-weight:bold;
+form input[type=file].input--choose-image {
+    padding: 0;
+    margin: 0;
+    border: none;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.icon--choose-image {
+    position: absolute;
+    opacity: 0.1;
+    width: 80px;
+    height: 80px;
+    top: 50%;
+    left: 50%;
+    margin-top: -40px;
+    margin-left: -40px;
+}
+
+.text--choose-image {
+    padding: 30px 0;
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+
+#targetOuter {
+    position: relative;
+    text-align: center;
+    background-color: #DDDDDD;
+    width: 100px;
+    height: 150px;
 }
 
 .button {
@@ -205,8 +250,6 @@ form .required{
     color: #ffffff;
     background-color: #fa2a00;
 }
-
-
 
 .tcbl-header {
     /* currently empty */
