Generalized picture storage implementation to allow more than one category of pictures. Added logging to picture storage implementation. Deleted picture storage interface (only one implementation and it is file storage specific). Added rest controller to serve picture files (allows to return a 404 in the response). Conversion from username to picture storage key now done in the UserController (who has a encodeBase64 method already). Limited field lengths in user registration form (especially the username, for compatibility with UserRepository!).

--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -13,16 +13,16 @@
 					<legend>Login details</legend>
 					<div class="row">
 						<div class="columns large-3">
-							<label for="userName">E-mail</label>
-							<input type="email" name="userName" id="userName" th:field="*{userName}" required/>
+							<label for="userName">E-mail *</label>
+							<input type="email" name="userName" id="userName" th:field="*{userName}" maxlength="128" required/>
 						</div>
 						<div class="columns large-3">
-							<label for="password">Password</label>
-							<input type="password" name="password" id="password" th:field="*{password}" autocomplete="off" required/>
+							<label for="password">Password *</label>
+							<input type="password" name="password" id="password" th:field="*{password}" autocomplete="off" maxlength="255" required/>
 						</div>
 						<div class="columns large-3">
-							<label for="cpassword">Confirm Password</label>
-							<input type="password" name="cpassword" id="cpassword" autocomplete="off" value="" required/>
+							<label for="cpassword">Confirm Password *</label>
+							<input type="password" name="cpassword" id="cpassword" autocomplete="off" value="" maxlength="255" required/>
 						</div>
 					</div>
 				</fieldset>
@@ -31,12 +31,12 @@
 					<legend>Profile information</legend>
 					<div class="row">
 						<div class="columns large-2">
-							<label for="firstName">First name</label>
-							<input type="text" name="firstName" id="firstName" th:field="*{firstName}" required/>
+							<label for="firstName">First name *</label>
+							<input type="text" name="firstName" id="firstName" th:field="*{firstName}" maxlength="255" required/>
 						</div>
 						<div class="columns large-2">
-							<label for="lastName">Last name</label>
-							<input type="text" name="lastName" id="lastName" th:field="*{lastName}" required/>
+							<label for="lastName">Last name *</label>
+							<input type="text" name="lastName" id="lastName" th:field="*{lastName}" maxlength="255" required/>
 						</div>
 					</div>
 					<div class="row">
@@ -72,7 +72,7 @@
 						<div class="columns large-1">
 							<input type="checkbox" th:field="*{acceptedPP}" required/>
 							<label class="label--checkbox" th:for="${#ids.prev('acceptedPP')}">I accept</label>
-							<label class="label--checkbox"><a target="_blank" th:href="${privacyUrl}" class="normal">the TCBL privacy policy</a>.</label>
+							<label class="label--checkbox"><a target="_blank" th:href="${privacyUrl}" class="normal">the TCBL privacy policy</a>. *</label>
 						</div>
 					</div>
 				</fieldset>
